# easySpectra

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
backend/: easynmr_backend.py  requirements.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  EXPERIMENTAL_NMR_CONVERSION_AND_TESTING_CHECKLIST.md  RELEASE.md  ROADMAP.md  SPEC.md  TODO.md
examples/: benchmark_cases.csv
examples/computed/: easy_13c_computed.csv  easy_19f_computed.csv  easy_31p_computed.csv  easy_cd_computed.csv  easy_nmr_computed.csv  hard_13c_computed.csv  hard_19f_computed.csv  hard_31p_computed.csv  hard_cd_computed.csv  hard_nmr_computed.csv  medium_13c_computed.csv  medium_19f_computed.csv  medium_31p_computed.csv  medium_cd_computed.csv  medium_nmr_computed.csv
examples/experimental/: easy_13c_overlay.csv  easy_19f_overlay.csv  easy_31p_overlay.csv  easy_cd_overlay.csv  easy_mnova_export.txt  hard_13c_overlay.csv  hard_19f_overlay.csv  hard_31p_overlay.csv  hard_cd_overlay.csv  hard_generic_export.csv  medium_13c_overlay.csv  medium_19f_overlay.csv  medium_31p_overlay.csv  medium_bruker_export.txt  medium_cd_overlay.csv
examples/external_nmr_pack/: README.md
examples/external_nmr_pack/_metadata/: 18.mol  20.mol
examples/external_nmr_pack/easy/raw/: 18-JCAMP.jdx  18-hsqc.mnova  18-hsqc.mnpub  20-1H.jdx  20-1H.mnova  20-1H.mnpub
examples/external_nmr_pack/hard/raw/: 20-hsqc.jdx  20-hsqc.mnova  20-hsqc.mnpub
examples/external_nmr_pack/medium/raw/: 20-13C.jdx  20-13C.mnova  20-13C.mnpub  20-hmbc.jdx  20-hmbc.mnova  20-hmbc.mnpub
examples/screenshots/: README.md
scripts/: generate_example_pack.py  regression_external_nmr_pack.sh  run_demo.sh  smoke_products_and_experimental.sh
src/cli/: experimental_check.cpp  main.cpp
src/core/: batch_parser.cpp  batch_parser.h  job.h  pipeline.cpp  pipeline.h  properties.cpp  properties.h  spectral_product.cpp  spectral_product.h  spectrum.cpp  spectrum.h
src/gui/: app_window.cpp  app_window.h  colored_input_editor.cpp  colored_input_editor.h  main.cpp  properties_widget.cpp  properties_widget.h  spectrum_widget.cpp  spectrum_widget.h  structure_widget.cpp  structure_widget.h  workflow_progress_widget.cpp  workflow_progress_widget.h
tests/: README.md  check_peak_quality.py  expected_peaks.json  run_spectra_comparison_matrix.sh  spectra_comparison_cases.csv  test_backend.py  test_batch_import.sh  test_spectrum_parser.sh
